--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,3 +216,73 @@ body {
     background: #4aaaa5;
     border: 0 none;
   }
+
+
+  @media screen and (max-width: 980px) {
+    .container {
+        max-width:768px;
+    }
+ 
+    #main-container {
+        padding-top: 130px;
+    }
+ 
+    .main-section {
+        max-width:420px;
+    }
+ 
+    .work {
+        width: 100%;
+    }
+ 
+    .auth-image {
+        width:100%;
+        margin-bottom: 20px;
+    }
+ }
+
+ @media screen and (max-width: 768px) {
+  .container {
+      max-width:550px;
+  }
+
+  #main-container {
+      padding-top: 60px;
+  }
+
+  .main-section {
+      max-width:350px;
+  }
+
+  .work {
+      width: 100%;
+  }
+
+  .auth-image {
+      width:100%;
+      margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .container {
+      max-width:400px;
+  }
+
+  #main-container {
+      padding-top: 100px;
+  }
+
+  .main-section {
+      max-width:200px;
+  }
+
+  .work {
+      width: 100%;
+  }
+
+  .auth-image {
+      width:100%;
+      margin-bottom: 10px;
+  }
+}
